@@ -101,8 +101,11 @@ class TestListBox(wx.Panel):
 
 
     def EvtListBox(self, event):
-        self.log.WriteText('EvtListBox: %s, %s, %s\n' %
-                           (event.GetString(), event.IsSelection(), event.GetSelection()))
+        self.log.WriteText('EvtListBox: %s, %s, %s, %s\n' %
+                           (event.GetString(),
+                            event.IsSelection(),
+                            event.GetSelection(),
+                            event.GetClientData()))
 
         lb = event.GetEventObject()
         data = lb.GetClientData(lb.GetSelection())
